<!--
    * GFW.Press
    * Copyright (C) 2016  chinashiyu ( chinashiyu@gfw.press ; http://gfw.press )
    * <p>
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, either version 3 of the License, or
    * (at your option) any later version.
    * <p>
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    * <p>
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <http://www.gnu.org/licenses/>.
    *-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:disableDependentsState="true"
        android:defaultValue="false"
        android:key="switch"
        android:title="@string/pref_title_switch"/>
    <!-- android:summary="@string/pref_description_social_recommendations" -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:digits="1234567890."
        android:dependency="switch"
        android:defaultValue="@string/pref_default_server"
        android:key="text_server"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server"/>

    <EditTextPreference
        android:numeric="integer"
        android:dependency="switch"
        android:defaultValue="@string/pref_default_port"
        android:key="text_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port"/>

    <EditTextPreference
        android:password="true"
        android:dependency="switch"
        android:defaultValue="@string/pref_default_password"
        android:inputType="textPassword"
        android:key="text_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password"/>

    <EditTextPreference
        android:numeric="integer"
        android:dependency="switch"
        android:defaultValue="@string/pref_default_listen_port"
        android:key="text_listen_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_listen_port"/>

</PreferenceScreen>
